    // how to stuff this into a CT
    // how to extract this from a CT
    // should it be hashed if part of a CT entry?
    //

        private:
            union {
                int         the_int;
                long        the_long;
                double      the_double;
                mpz_t       the_mpz;
            };

            oper_item_type mytype;
    };




unary:

    compute(edge_value inv, node_handle inp,
            int out_level,
            edge_value &outv, node_handle &outp);

    compute(edge_value inv, node_handle inp, long &out);
    compute(edge_value inv, node_handle inp, double &out);
    compute(edge_value inv, node_handle inp, ct_object &out);

    // TBD: do we want a wrapper object for non-dd compute results,
    // something like:
    compute(edge_value inv, node_handle inp, compute_result &out);
    // or can we use ct_object here and expand it???



binary:
    compute(edge_value av, node_handle ap, edge_value bv, node_handle bp,
        int out_level,
        edge_value &outv, node_handle &outp);



Operation updates, to do:
    * re-implement operations using new CT interface
        start with intersection and check timing

    * eventually: remove CTs from operation base class
    * eventually: remove entry registration from operation base class


Unpacked matrix class (new):
    * array of pointers to unpacked_node,
      allocated in chunks of 16
    * memory is recycled like in unpacked_node
    * newUnpacked(forest* f, node_handle p, node_storage_flags rs);
        // p is at an unprimed level
        // rs determines storage for each row
    * newRedundant(const forest* f, int k, const edge_value &ev,
                    node_handle p, node_storage_flags);
    * newIdentity(const forest* f, int k, const edge_value &ev,
                    node_handle p, node_storage_flags);
    * newBlank(forest* f, int k, node_storage_flags);

    * reduce(edge_value &ev, node_handle &p);


Next release:
