@@ -92,6 +92,13 @@ oper_item.h:
     };
 
 
+Hashing an mpz_t if needed:
+    size_t mpz_size(const mpz_t x);
+    const mp_libt_t* mpz_limbs_read(const mpz_t x);
+or
+    mp_limb_t mpz_getlimbn(const mpz_t x, mp_size_t n);
+    // ^ use 0 for least significant limb
+    // (i.e., maybe only hash this lsl?)
 
 
 unary:
